--- a/src/component/page/side/side.css
+++ b/src/component/page/side/side.css
@@ -2,9 +2,10 @@
 .sideBar{
     height:100%;
     width:270px;
-    position: relative;
+    /* position: relative; */
     background-color: rgba(245, 245, 245, 0.2);
     margin:5px;
+    /* position: fixed; */
     box-shadow: -7.829px 11.607px 21px 0px rgba(241, 242, 243, 0.2);
 }
 .nav{
@@ -25,19 +26,31 @@
     width:260px;
 }
 .nav li:hover{
-    border-left:2px solid wheat ;
+    border-left:2px solid rgb(2, 2, 2) ;
 }
 .nav li a{
     /* padding: 20px; */
-    color:white;
+    font-weight: 600;
+    color:black;
     font-size: 20px;
     text-decoration: none;
 }
 @media(max-width:500px){
-    .nav li a{
+    .nav li a p{
         display: none;
     }
-.sideBar{
-    width:80px;
+    nav a{
+        position: relative;
+        left:-60px;
     }
+    .sideBar{
+        width:80px;
+        padding:2px;
+    }
+}
+.nav li a:hover{
+    /* padding: 20px; */
+    color:red;
+    font-size: 20px;
+    text-decoration: none;
 }
